--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ label.logo {
 }
 
 section {
-    background: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Ffisk.com.br%2Fblog%2F6-curiosidades-sobre-o-hamburguer&psig=AOvVaw3EW-edj5mRgq-WV6OCgesz&ust=1702525319454000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCJC2iY_ai4MDFQAAAAAdAAAAABAE") no-repeat;
+    background: url("/images/burger-with-egg-it-side-ketchup.jpg") no-repeat;
     background-size: cover;
     height: 100vh;
 }
